cmake_minimum_required(VERSION 3.3)
project(Leet_Code)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


add_executable(MDoBT "Algorithm/Maximum Depth of Binary Tree.cpp")
add_executable(MkSL "Algorithm/Merge k Sorted Lists.cpp")
add_executable(RDfSA2 "Algorithm/Remove Duplicates from Sorted Array II.c")
add_executable(RDfSA "Algorithm/Remove Duplicates from Sorted Array.c")
add_executable(ST "Algorithm/Same Tree.cpp")
add_executable(SN "Algorithm/Single Number.cpp")
add_executable(MZ "Algorithm/Move Zeroes.cpp")